Fixing text wrapping issues

--- a/Public/Static/tart.css
+++ b/Public/Static/tart.css
@@ -204,6 +204,9 @@ p.btext {
   text-overflow: ellipsis;
   font-size: 1em;
 }
+.wrap {
+  white-space: wrap;
+}
 
 /* Button Classes */
 
